Ci: Remove CI-local and Fix CI Test
- CI Test에서 문제를 수정
- CI-local workflow 삭제

--- a/package.json
+++ b/package.json
@@ -26,15 +26,8 @@
     "format": "npm -w frontend run format && npm -w backend run format",
     "test": "npm -w frontend run test && npm -w backend run test",
     "test:ci": "npm -w frontend run test:ci && npm -w backend run test:ci",
-    "clean": "rm -rf node_modules frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo .github/workflows/.secrets && echo '✅ Cleaned: node_modules, dist, .env files, .env-repo, .secrets'",
-    "clean:force": "sudo rm -rf node_modules frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo .github/workflows/.secrets && echo '✅ Force cleaned with sudo'",
-    "act:check": "command -v act >/dev/null 2>&1 || (echo '❌ act is not installed. Run: brew install act' && exit 1)",
-    "act:setup": "npm run act:check && cd .github/workflows && test -f .secrets || (cp .secrets.example .secrets && echo '✅ Created .secrets file. Please edit it with your GitHub PAT.')",
-    "act:lint": "command -v actionlint >/dev/null 2>&1 && actionlint || (echo '💡 actionlint not installed. Run: brew install actionlint' && exit 1)",
-    "act:dry": "npm run act:check && act -n",
-    "act:ci": "npm run act:check && act push -W .github/workflows/ci-local.yml -j build-and-test --rm",
-    "act:ci:verbose": "npm run act:check && act push -W .github/workflows/ci-local.yml -j build-and-test -v --rm",
-    "act:ci:real": "npm run act:check && npm run act:setup && act push --secret-file .github/workflows/.secrets -j build-and-test --rm",
+    "clean": "rm -rf node_modules frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo && echo '✅ Cleaned: node_modules, dist, .env files, .env-repo'",
+    "clean:force": "sudo rm -rf node_modules frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo && echo '✅ Force cleaned with sudo'",
     "db:up": "cd db && docker compose up -d",
     "db:down": "cd db && docker compose down",
     "db:logs": "docker logs -f syncnapse-postgres",
