--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
+    "@aws-sdk/s3-request-presigner": "^3.705.0",
     "@nestjs/common": "^10.4.7",
     "@nestjs/core": "^10.4.7",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/platform-socket.io": "~10.4.0",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/websockets": "~10.4.0",
     "@prisma/client": "^5.22.0",
     "aws-sdk": "^2.1692.0",
     "class-transformer": "^0.5.1",
@@ -33,6 +36,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
