--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -5,3 +5,8 @@ NEXT_PUBLIC_API_URL=https://syncd-backend.dev.i-dear.org
 # true: Mock 데이터 사용 (백엔드 없이 개발)
 # false: 실제 백엔드 API 사용
 NEXT_PUBLIC_USE_MOCK_AUTH=true
+
+# Liveblocks Public API Key
+# https://liveblocks.io/dashboard 에서 발급받을 수 있습니다
+# Educator 노트의 실시간 협업 기능에 사용됩니다
+NEXT_PUBLIC_LIVEBLOCKS_PUBLIC_KEY=your_liveblocks_public_key_here
