--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "fabric": "^6.7.1",
     "firebase": "^12.4.0",
+    "lucide-react": "^0.553.0",
     "next": "^14.2.33",
     "pdfjs-dist": "^3.11.174",
     "react": "18.3.1",
