Feat: Implement full audio recording and transcription

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,7 @@ http {
   error_log  /dev/stderr warn;
 
   upstream backend { server backend:4000; }
+  upstream frontend { server frontend:3000; }
 
   server {
     listen 80;
@@ -39,13 +40,21 @@ http {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Host $host;
 
+    # Backend API routes
     location /api/ {
       proxy_http_version 1.1;
       proxy_pass http://backend;
     }
 
+    # Frontend routes (all other paths)
     location / {
-      return 404;
+      proxy_http_version 1.1;
+      proxy_pass http://frontend;
+      
+      # WebSocket support for Next.js HMR (Hot Module Replacement)
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_cache_bypass $http_upgrade;
     }
   }
 }
