--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,14 @@
     "test:ci": "node --experimental-vm-modules ../node_modules/vitest/vitest.mjs run --reporter=dot -c vitest.config.mts"
   },
   "dependencies": {
+    "@blocknote/core": "^0.41.1",
+    "@blocknote/mantine": "^0.41.1",
+    "@blocknote/react": "^0.41.1",
     "@liveblocks/client": "^3.10.0",
     "@liveblocks/react": "^3.10.0",
     "@liveblocks/yjs": "^3.10.0",
+    "@mantine/core": "^8.3.7",
+    "@mantine/hooks": "^8.3.7",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/fabric": "^5.3.10",
