Fix: Fix Note & Folder add Logics
- MinIO에 저장되는 파일, 폴더 구조 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,14 @@ services:
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}
       - FRONTEND_URL=${FRONTEND_URL:-http://localhost:3000}
+      # Storage (MinIO/S3)
+      - STORAGE_PROVIDER=${STORAGE_PROVIDER}
+      - STORAGE_ENDPOINT=${STORAGE_ENDPOINT}
+      - STORAGE_BUCKET=${STORAGE_BUCKET}
+      - STORAGE_REGION=${STORAGE_REGION}
+      - STORAGE_ACCESS_KEY_ID=${STORAGE_ACCESS_KEY_ID}
+      - STORAGE_SECRET_ACCESS_KEY=${STORAGE_SECRET_ACCESS_KEY}
+      - STORAGE_ENCRYPTION_KEY=${STORAGE_ENCRYPTION_KEY}
     ports:
       - "${BACKEND_PORT_PUBLIC}:4000"
 
