--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,6 +1,5 @@
 # 백엔드 API URL
-NEXT_PUBLIC_API_URL=https://syncd-backend.dev.i-dear.org
-
+NEXT_PUBLIC_API_URL=
 # Mock 인증 사용 여부 (개발용)
 # true: Mock 데이터 사용 (백엔드 없이 개발)
 # false: 실제 백엔드 API 사용
