--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -21,6 +21,11 @@
   "ignorePatterns": [
     "dist/**"
   ],
+  "rules": {
+    "@typescript-eslint/no-unused-expressions": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off"
+  },
   "overrides": [
     {
       "files": ["**/*.spec.ts", "**/*.test.ts"],
