--- a/backend/package.json
+++ b/backend/package.json
@@ -18,19 +18,20 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
     "@aws-sdk/s3-request-presigner": "^3.705.0",
-    "@nestjs/common": "^10.4.7",
-    "@nestjs/core": "^10.4.7",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.7",
-    "@nestjs/platform-socket.io": "~10.4.0",
-    "@nestjs/schedule": "^6.0.1",
-    "@nestjs/swagger": "^7.4.2",
-    "@nestjs/websockets": "~10.4.0",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/schedule": "^4.1.2",
+    "@nestjs/swagger": "^8.1.0",
+    "@nestjs/throttler": "^6.4.0",
+    "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.22.0",
-    "aws-sdk": "^2.1692.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -40,9 +41,10 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.10",
-    "@nestjs/schematics": "^10.1.2",
-    "@nestjs/testing": "^10.4.7",
+    "@jest/test-sequencer": "^30.2.0",
+    "@nestjs/cli": "^10.4.9",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.15",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
@@ -50,8 +52,8 @@
     "@types/node": "^20.14.11",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^3.0.6",
-    "@typescript-eslint/eslint-plugin": "^8.46.0",
-    "@typescript-eslint/parser": "^8.46.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -63,6 +65,6 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.7.2"
   }
 }
