--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": ["next/core-web-vitals"],
   "rules": {
-    "no-console": ["warn", { "allow": ["warn", "error", "info"] }]
+    "no-console": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "@next/next/no-img-element": "off"
   }
 }
