fix: test and lint

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@blocknote/core": "^0.41.1",
     "@blocknote/mantine": "^0.41.1",
     "@blocknote/react": "^0.41.1",
+    "@emotion/is-prop-valid": "^1.4.0",
     "@liveblocks/client": "^3.10.0",
     "@liveblocks/react": "^3.10.0",
     "@liveblocks/yjs": "^3.10.0",
@@ -28,6 +29,7 @@
     "clsx": "^2.1.1",
     "fabric": "^6.7.1",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "^14.2.33",
     "pdfjs-dist": "^5.4.394",
