--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,8 +1,6 @@
 {
   "extends": ["next/core-web-vitals"],
   "rules": {
-    "no-console": "off",
-    "react-hooks/exhaustive-deps": "off",
-    "@next/next/no-img-element": "off"
+    "no-console": ["warn", { "allow": ["warn", "error", "info"] }]
   }
 }
