--- a/backend/package.json
+++ b/backend/package.json
@@ -30,11 +30,15 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.22.0",
+    "@types/nodemailer": "^7.0.4",
+    "@types/passport-google-oauth20": "^2.0.17",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
