--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
     "@aws-sdk/s3-request-presigner": "^3.705.0",
+    "@google/generative-ai": "^0.24.1",
     "@liveblocks/node": "^3.10.1",
     "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^10.4.15",
@@ -38,6 +39,7 @@
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "llamaindex": "^0.12.0",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
