--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.7",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
