--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,9 @@ services:
       - STORAGE_ACCESS_KEY_ID=${STORAGE_ACCESS_KEY_ID}
       - STORAGE_SECRET_ACCESS_KEY=${STORAGE_SECRET_ACCESS_KEY}
       - STORAGE_ENCRYPTION_KEY=${STORAGE_ENCRYPTION_KEY}
+      # Gemini AI
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - GEMINI_MODEL_NAME=${GEMINI_MODEL_NAME}
     ports:
       - "${BACKEND_PORT_PUBLIC}:4000"
 
