--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -29,6 +29,28 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22.20.0'
+          cache: 'npm'
+
+      - name: Sync Environment Variables
+        env:
+          GITHUB_TOKEN: ${{ secrets.ENV_REPO_PAT }}
+          ENV_REPO_URL: https://x-access-token:${{ secrets.ENV_REPO_PAT }}@github.com/CodeGachi/.env.git
+        run: |
+          # Install deps for scripts only (root package.json)
+          npm install --ignore-scripts
+          # Run sync script for prod environment
+          node scripts/sync-env-from-repo.mjs prod
+          # Copy .env.prod to .env for build context
+          cp .env.prod .env
+          
+          # Copy .env to frontend for build-time injection
+          cp .env frontend/.env
+          
+          echo "✅ Environment synced successfully"
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -62,6 +84,27 @@ jobs:
           echo "  Frontend: $ECR_REGISTRY/$ECR_REPO_FRONTEND:$TAG"
           echo "  Backend:  $ECR_REGISTRY/$ECR_REPO_BACKEND:$TAG"
       
+      - name: Prepare Environment Variables JSON
+        id: env-json
+        run: |
+          # Convert .env to JSON for Task Definition
+          node -e '
+            const fs = require("fs");
+            const env = fs.readFileSync(".env", "utf8");
+            const json = env.split("\n")
+              .filter(line => line && !line.startsWith("#"))
+              .map(line => {
+                const parts = line.split("=");
+                if (parts.length < 2) return null;
+                const key = parts[0].trim();
+                const value = parts.slice(1).join("=").trim();
+                return { name: key, value: value };
+              })
+              .filter(item => item && item.name && item.value);
+            console.log(JSON.stringify(json));
+          ' > env.json
+          echo "✅ Converted .env to JSON"
+
       - name: Update ECS Task Definition (Frontend)
         id: task-def-frontend
         run: |
@@ -71,9 +114,12 @@ jobs:
             --query 'taskDefinition' \
             --output json > /tmp/task-def-frontend.json 2>&1
           
-          # Update image URI in task definition
+          # Update image URI and Environment variables
+          # Note: Frontend vars are mostly build-time, but some might be runtime
           jq --arg IMAGE "$ECR_REGISTRY/$ECR_REPO_FRONTEND:${{ steps.build.outputs.tag }}" \
+             --slurpfile ENV_VARS env.json \
             '.containerDefinitions[0].image = $IMAGE | 
+             .containerDefinitions[0].environment = $ENV_VARS[0] |
              del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' \
             /tmp/task-def-frontend.json > /tmp/new-task-def-frontend.json
           
@@ -98,9 +144,11 @@ jobs:
             --query 'taskDefinition' \
             --output json > /tmp/task-def-backend.json 2>&1
           
-          # Update image URI in task definition
+          # Update image URI and Environment variables
           jq --arg IMAGE "$ECR_REGISTRY/$ECR_REPO_BACKEND:${{ steps.build.outputs.tag }}" \
+             --slurpfile ENV_VARS env.json \
             '.containerDefinitions[0].image = $IMAGE | 
+             .containerDefinitions[0].environment = $ENV_VARS[0] |
              del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' \
             /tmp/task-def-backend.json > /tmp/new-task-def-backend.json
           
