--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "pdfjs-dist": "^5.4.394",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
