--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "${POSTGRES_PORT_PUBLIC}:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - ../data/postgres:/var/lib/postgresql/data
       - ./init:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
@@ -22,6 +22,3 @@ services:
 networks:
   default:
     name: syncnapse_net
-
-volumes:
-  postgres-data:
