--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -29,10 +29,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - uses: actions/setup-node@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: '22.20.0'
-          cache: 'npm'
+          bun-version: latest
 
       - name: Sync Environment Variables
         env:
@@ -40,9 +39,9 @@ jobs:
           ENV_REPO_URL: https://x-access-token:${{ secrets.ENV_REPO_PAT }}@github.com/CodeGachi/.env.git
         run: |
           # Install deps for scripts only (root package.json)
-          npm install --ignore-scripts
+          bun install --ignore-scripts
           # Run sync script for prod environment
-          node scripts/sync-env-from-repo.mjs prod
+          bun scripts/sync-env-from-repo.mjs prod
           # Copy .env.prod to .env for build context
           cp .env.prod .env
           
@@ -60,25 +59,33 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
       
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push images
         id: build
         run: |
           TAG="sha-${GITHUB_SHA::7}"
           echo "tag=$TAG" >> $GITHUB_OUTPUT
           
-          # Build images
-          docker build -t $ECR_REGISTRY/$ECR_REPO_FRONTEND:$TAG -f frontend/Dockerfile ./frontend
-          docker build -t $ECR_REGISTRY/$ECR_REPO_BACKEND:$TAG -f backend/Dockerfile ./backend
+          # Build images with BuildKit cache
+          docker buildx build \
+            --cache-from type=gha \
+            --cache-to type=gha,mode=max \
+            -t $ECR_REGISTRY/$ECR_REPO_FRONTEND:$TAG \
+            -t $ECR_REGISTRY/$ECR_REPO_FRONTEND:latest \
+            -f frontend/Dockerfile \
+            --push \
+            ./frontend
           
-          # Tag as latest
-          docker tag $ECR_REGISTRY/$ECR_REPO_FRONTEND:$TAG $ECR_REGISTRY/$ECR_REPO_FRONTEND:latest
-          docker tag $ECR_REGISTRY/$ECR_REPO_BACKEND:$TAG $ECR_REGISTRY/$ECR_REPO_BACKEND:latest
-          
-          # Push all tags
-          docker push $ECR_REGISTRY/$ECR_REPO_FRONTEND:$TAG
-          docker push $ECR_REGISTRY/$ECR_REPO_FRONTEND:latest
-          docker push $ECR_REGISTRY/$ECR_REPO_BACKEND:$TAG
-          docker push $ECR_REGISTRY/$ECR_REPO_BACKEND:latest
+          docker buildx build \
+            --cache-from type=gha \
+            --cache-to type=gha,mode=max \
+            -t $ECR_REGISTRY/$ECR_REPO_BACKEND:$TAG \
+            -t $ECR_REGISTRY/$ECR_REPO_BACKEND:latest \
+            -f backend/Dockerfile \
+            --push \
+            ./backend
           
           echo "✅ Images pushed:"
           echo "  Frontend: $ECR_REGISTRY/$ECR_REPO_FRONTEND:$TAG"
