--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "start": "node dist/main.js",
     "start:dev": "nodemon",
-    "build": "nest build -c tsconfig.build.json",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate:dev": "prisma migrate dev --name init",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --runInBand",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --write ."
+    "build": "bunx nest build -c tsconfig.build.json",
+    "prisma:generate": "bunx prisma generate",
+    "prisma:migrate:dev": "bunx prisma migrate dev --name init",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:ci": "bun test --bail",
+    "lint": "bunx eslint . --ext .ts",
+    "format": "bunx prettier --write ."
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
@@ -28,7 +28,7 @@
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/schedule": "^4.1.2",
-    "@nestjs/swagger": "^8.1.0",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.22.0",
@@ -53,9 +53,10 @@
   },
   "devDependencies": {
     "@jest/test-sequencer": "^30.2.0",
-    "@nestjs/cli": "^10.4.9",
+    "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
+    "@types/bun": "latest",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
