--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -2,19 +2,17 @@ services:
   postgres:
     image: postgres:16
     container_name: syncnapse-postgres
-    env_file:
-      - ../.env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_USER: ${POSTGRES_USER:-sn2025}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB:-syncnapse}
     ports:
-      - "${POSTGRES_PORT_PUBLIC}:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - ../data/postgres:/var/lib/postgresql/data
       - ./init:/docker-entrypoint-initdb.d:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-sn2025}"]
       interval: 5s
       timeout: 5s
       retries: 10
