--- a/package.json
+++ b/package.json
@@ -9,39 +9,38 @@
   ],
   "engines": {
     "node": ">=22.20.0",
-    "npm": ">=10.9.0"
+    "bun": ">=1.0.0"
   },
   "scripts": {
-    "ci:lint": "ENV_TARGET=dev node scripts/docker-ci.mjs lint all",
-    "ci:test": "ENV_TARGET=dev node scripts/docker-ci.mjs test all",
-    "ci:build": "ENV_TARGET=dev node scripts/docker-ci.mjs build all",
-    "ci:lint:frontend": "ENV_TARGET=dev node scripts/docker-ci.mjs lint frontend",
-    "ci:lint:backend": "ENV_TARGET=dev node scripts/docker-ci.mjs lint backend",
-    "ci:test:frontend": "ENV_TARGET=dev node scripts/docker-ci.mjs test frontend",
-    "ci:test:backend": "ENV_TARGET=dev node scripts/docker-ci.mjs test backend",
-    "install": "npm i --ignore-scripts && npm -w backend i --ignore-scripts && npm -w backend exec prisma generate && npm -w frontend i --ignore-scripts",
-    "build": "npm -w backend run build && npm -w frontend run build",
-    "dev": "NODE_ENV=dev concurrently -n FRONTEND,BACKEND -c blue,green \"npm -w frontend run dev\" \"npm -w backend run start:dev\"",
-    "lint": "npm -w frontend run lint && npm -w backend run lint",
-    "format": "npm -w frontend run format && npm -w backend run format",
-    "test": "npm -w frontend run test && npm -w backend run test",
-    "test:ci": "npm -w frontend run test:ci && npm -w backend run test:ci",
-    "clean": "npm run dev:down && rm -rf node_modules data frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo && echo '✅ Cleaned: node_modules, dist, .env files, .env-repo'",
-    "clean:force": "npm run dev:down && sudo rm -rf node_modules data frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo && echo '✅ Force cleaned with sudo'",
+    "ci:lint": "ENV_TARGET=dev bun scripts/docker-ci.mjs lint all",
+    "ci:test": "ENV_TARGET=dev bun scripts/docker-ci.mjs test all",
+    "ci:build": "ENV_TARGET=dev bun scripts/docker-ci.mjs build all",
+    "ci:lint:frontend": "ENV_TARGET=dev bun scripts/docker-ci.mjs lint frontend",
+    "ci:lint:backend": "ENV_TARGET=dev bun scripts/docker-ci.mjs lint backend",
+    "ci:test:frontend": "ENV_TARGET=dev bun scripts/docker-ci.mjs test frontend",
+    "ci:test:backend": "ENV_TARGET=dev bun scripts/docker-ci.mjs test backend",
+    "prepare": "bun run --cwd backend prisma:generate",
+    "build": "bun run --cwd backend build && bun run --cwd frontend build",
+    "dev": "NODE_ENV=dev concurrently -n FRONTEND,BACKEND -c blue,green \"bun run --cwd frontend dev\" \"bun run --cwd backend start:dev\"",
+    "lint": "bun run --cwd frontend lint && bun run --cwd backend lint",
+    "format": "bun run --cwd frontend format && bun run --cwd backend format",
+    "test": "bun run --cwd frontend test && bun run --cwd backend test",
+    "test:ci": "bun run --cwd frontend test:ci && bun run --cwd backend test:ci",
+    "clean": "bun run dev:down && rm -rf node_modules data frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo && echo '✅ Cleaned: node_modules, dist, .env files, .env-repo'",
+    "clean:force": "bun run dev:down && sudo rm -rf node_modules data frontend/node_modules backend/node_modules frontend/dist frontend/.next backend/dist .env .env.dev .env.prod backend/.env .env-repo && echo '✅ Force cleaned with sudo'",
     "db:up": "cd db && docker compose up -d",
     "db:down": "cd db && docker compose down",
     "db:logs": "docker logs -f syncnapse-postgres",
-    "db:export:schema": "ENV_TARGET=dev node scripts/export-db-schema.mjs",
-    "seed:minio": "ENV_TARGET=dev node scripts/seed-minio.mjs",
-    "env:sync": "node scripts/sync-env-from-repo.mjs dev",
-    "env:sync:prod": "node scripts/sync-env-from-repo.mjs prod",
-    "env:push": "node scripts/push-env-to-repo.mjs dev",
-    "env:push:prod": "node scripts/push-env-to-repo.mjs prod",
+    "seed:minio": "ENV_TARGET=dev bun scripts/seed-minio.mjs",
+    "env:sync": "bun scripts/sync-env-from-repo.mjs dev",
+    "env:sync:prod": "bun scripts/sync-env-from-repo.mjs prod",
+    "env:push": "bun scripts/push-env-to-repo.mjs dev",
+    "env:push:prod": "bun scripts/push-env-to-repo.mjs prod",
     "gemini:setup": "bash scripts/add-gemini-key.sh",
-    "setup": "npm install && npm run env:sync && ENV_TARGET=dev node scripts/sync-envs.mjs && npm -w backend run prisma:generate && ENV_TARGET=dev node scripts/export-db-schema.mjs",
+    "setup": "bun install --ignore-scripts && cd backend && bun install --ignore-scripts && cd ../frontend && bun install --ignore-scripts && cd .. && bun run --cwd backend prisma:generate && bun run env:sync && ENV_TARGET=dev bun scripts/sync-envs.mjs",
     "dev:all": "docker compose --env-file .env.dev -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.minio.yml up -d --build",
     "dev:down": "docker compose --env-file .env.dev -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.minio.yml down",
-    "dev:restart": "npm run dev:down && npm run dev:all",
+    "dev:restart": "bun run dev:down && bun run dev:all",
     "dev:logs": "docker compose --env-file .env.dev -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.minio.yml logs -f"
   },
   "devDependencies": {
